--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@wdio/allure-reporter": "^9.14.0",
     "abort-controller": "^3.0.0",
     "agent-base": "^7.1.3",
+    "allure": "^3.0.0-beta.13",
     "ansi-escapes": "^4.3.2",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^5.2.0",
@@ -49,6 +51,7 @@
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "commander": "^9.5.0",
+    "commandline": "^0.0.2",
     "compress-commons": "^6.0.2",
     "concat-map": "^0.0.1",
     "core-util-is": "^1.0.3",
